--- a/package.json
+++ b/package.json
@@ -11,21 +11,52 @@
     "test:performance": "node tests/performance/performance-test.js",
     "test:all": "npm run test && npm run test:e2e && npm run test:performance",
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "NODE_ENV=production vite build",
+    "build:dev": "NODE_ENV=development vite build",
+    "build:staging": "NODE_ENV=staging vite build",
+    "build:gh-pages": "NODE_ENV=production VITE_BASE_PATH=/bubble-pop-web-game/ vite build",
+    "build:analyze": "npm run build && npx vite-bundle-analyzer dist/stats.html",
+    "preview": "vite preview",
+    "preview:dist": "vite preview --port 4173 --host",
+    "clean": "rm -rf dist",
+    "deploy:netlify": "node scripts/deploy.js netlify production",
+    "deploy:vercel": "node scripts/deploy.js vercel production",
+    "deploy:gh-pages": "node scripts/deploy.js gh-pages production",
+    "deploy:all": "node scripts/deploy.js all production",
+    "deploy:staging": "node scripts/deploy.js netlify staging",
+    "optimize": "node scripts/build-optimize.js",
+    "lighthouse": "lighthouse http://localhost:4173 --output=html --output-path=./lighthouse-report.html",
+    "lighthouse:ci": "lhci autorun",
+    "size-check": "bundlesize"
   },
   "devDependencies": {
-    "@jest/environment-jsdom": "^29.7.0",
     "@playwright/test": "^1.40.0",
-    "canvas": "^2.11.2",
+    "bundlesize": "^0.18.1",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^5.0.0"
+    "lighthouse": "^11.0.0",
+    "terser": "^5.43.1",
+    "vite": "^5.0.0",
+    "vite-bundle-analyzer": "^0.7.0"
   },
+  "bundlesize": [
+    {
+      "path": "./dist/assets/*.js",
+      "maxSize": "500 kB",
+      "compression": "gzip"
+    },
+    {
+      "path": "./dist/assets/*.css",
+      "maxSize": "50 kB",
+      "compression": "gzip"
+    }
+  ],
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ],
     "moduleNameMapping": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
@@ -46,7 +77,13 @@
       "<rootDir>/tests/**/*.test.js"
     ]
   },
-  "keywords": ["game", "bubble", "canvas", "web", "javascript"],
+  "keywords": [
+    "game",
+    "bubble",
+    "canvas",
+    "web",
+    "javascript"
+  ],
   "author": "BubblePop Team",
   "license": "MIT"
 }
