--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A web-based bubble popping game with various bubble types and special effects",
   "type": "module",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "test:e2e": "playwright test --reporter=list",
     "test:performance": "node tests/performance/performance-test.js",
     "test:all": "npm run test && npm run test:e2e && npm run test:performance",
