fix: add GitHub Actions permissions for PR comments
- Add permissions for contents:read, pull-requests:write, issues:write
- This resolves the 403 'Resource not accessible by integration' error
- Allows file size monitoring to post comments on PRs

The file size validation itself is working correctly (0 error files),
but GitHub Actions needs explicit permissions to comment on PRs.

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -7,6 +7,12 @@ on:
   pull_request:
     branches: [ main, master ]
 
+# GitHub Actions の権限設定
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 env:
   NODE_VERSION: '18'
 
@@ -113,6 +119,10 @@ jobs:
   file-size-monitoring:
     name: File Size Monitoring
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     
     steps:
       - name: Checkout repository
