fix: 中国語簡体字ヘルプファイルのJSON構文エラーを修正
- troubleshooting.jsonの引用符エスケープエラーを修正
- 検証スクリプトですべてのファイルが正常に検証されることを確認
- Task 6.1: コンテンツ検証スクリプトの実装完了

--- a/src/core/help/content/help/zh-CN/settings.json
+++ b/src/core/help/content/help/zh-CN/settings.json
@@ -427,12 +427,12 @@
     "troubleshooting_settings": {
       "performance_issues": [
         "帧率限制为30 FPS",
-        "粒子效果设为"低"",
-        "动画品质改为"简单"",
-        "内存清理设为"积极""
+        "粒子效果设为\"低\"",
+        "动画品质改为\"简单\"",
+        "内存清理设为\"积极\""
       ],
       "audio_problems": [
-        "音频缓冲改为"大"",
+        "音频缓冲改为\"大\"",
         "降低采样率",
         "停止其他应用的音频",
         "更新音频驱动"
